--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 *{
-  margin:0;
-  pedding:0;
+margin:0;
+pedding:0;
 }
+body{
+  background: #CCCCCC
+  }
+p{
+  text-align: center;
+ }
+em strong{
+  color: red;
