--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
     margin:0;
     pedding:0;
 }
-
 body{
   background: #CCCCCC
 }
-
+h1{
+    text-align: center;
+}
 p{
     text-align: center;
  }
