--- a/style.css
+++ b/style.css
@@ -5,13 +5,19 @@
 body{
   background: #CCCCCC
 }
+#banner{
+ width:100%;
+}
 h1{
     text-align: center;
 }
 p{
     text-align: center;
- }
+    font-size: 20px
+}
+#missao{
+ font-size: 30px;
 
-em strong{
+    em strong{
   color: red;
-  }
+}
