--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 *{
-    margin:0;
-    pedding:0;
+    margin:o;
+    pedding:o;
 }
 body{
-  background: #CCCCCC;
+  background: #CCCCCC
 }
 #banner{
  width:100%;
