--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    margin:o;
-    pedding:o;
+    margin:0;
+    pedding:0;
 }
 body{
   background: #CCCCCC
@@ -17,7 +17,7 @@ p{
 }
 #missao{
  font-size: 30px;
-
+}
     em strong{
   color: red;
 }
