--- a/style.css
+++ b/style.css
@@ -1,24 +1,32 @@
 *{
     margin: 0;
     pedding: 0;
+
+body {
 }
 
-body{
-    background: #CCCCCC
+#banner {
+    width: 100%;
 }
-#banner{
-    width:100%;
+
+.principal {
+    background: #CCCCCC;
+    podding: 30px;
 }
-h1{
+
+h1 {
+    text-align: center
+}
+
+p {
     text-align: center;
+    font-size: 20px;
 }
-p{
-    text-align: center;
-    font-size: 20px
+
+#missao {
+    font-size: 30px
 }
-#missao{
- font-size: 30px;
-}
-    em strong{
-  color: red;
+
+em strong {
+    color: red;
 }
