--- a/style.css
+++ b/style.css
@@ -1,56 +1,54 @@
-*{
+* {
     margin: 0;
     pedding: 0;
 
-body {
-}
+    body {}
 
-#banner {
-    width: 100%;
-}
+    #banner {
+        width: 100%;
+    }
 
-.principal {
-    background: #CCCCCC;
-    padding: 30px;
-}
+    .principal {
+        background: #CCCCCC;
+        padding: 30px;
+    }
 
-.titulo-principal {
-    padding-left: 20px;
-}
+    .titulo-principal {
+        padding-left: 20px;
+    }
 
-.titulo-secundario{
-    text-align: center;
-}
+    .titulo-secundario {
+        text-align: center;
+    }
 
-p {
-    text-align: center;
-    font-size: 20px;
-}
+    p {
+        text-align: center;
+        font-size: 20px;
+    }
 
-#missao {
-    font-size: 30px
-}
+    #missao {
+        font-size: 30px
+    }
 
-em strong {
-    color: red;
-}
+    em strong {
+        color: red;
+    }
 
-.itens {
-    font-style: italic;
-}
+    .itens {
+        font-style: italic;
+    }
 
-.beneficios {
-    backgound: #FFFFFF
-    padding: 20px;
-}
+    .beneficios {
+        backgound: #FFFFFF padding: 20px;
+    }
 
-ul {
-    display: inline-block;
-    Vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
-}
+    ul {
+        display: inline-block;
+        Vertical-align: top;
+        width: 20%;
+        margin-right: 15%;
+    }
 
-.imagem-beneficios{
-    width: 50%
-}
+    .imagem-beneficios {
+        width: 50%
+    }
