--- a/produtos.css
+++ b/produtos.css
@@ -50,6 +50,18 @@ nav a:hover {
     border-radius: 10px;
 }
 
+.produtos li:hover{
+    border-color: blue;
+}
+
+.produtos li:active{
+    border-color: green;
+}
+
+.produtos li:hover h2{
+    font-size: 34px;
+}
+
 .produtos h2 {
     font-size: 30px;
     font-weight: bold;
