--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@
     }
 
     .beneficios {
-        backgound: #FFFFFF padding: 20px;
+        backgound: #FFFFFF 
+        padding: 20px;
     }
 
     ul {
