--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
-    pedding: 0;
+    padding: 0;
+}
 
     body {}
 
@@ -39,7 +40,7 @@
     }
 
     .beneficios {
-        backgound: #FFFFFF 
+        background: #FFFFFF; 
         padding: 20px;
     }
 
